# blackhole_sim

./: .gitignore  .ignore  CMakeLists.txt  README.md  build.sh  imgui.ini
.cache/clangd/index/: Application.cpp.9DC040C3981B942C.idx  Application.hpp.81881A8B6BF3A848.idx  BlackHole.cpp.7C985D2C8C6D9C20.idx  BlackHole.hpp.7E94479D0760072A.idx  Box.cpp.AA3E3CABEC738BB5.idx  Box.hpp.7C9331CC1F30737A.idx  Camera.cpp.68143813A6A1D5F8.idx  Camera.hpp.A962749FB2DFD839.idx  Cubemap.cpp.440905C6FFD5E04A.idx  MeshBase.hpp.13C96BC0FA1917E8.idx  Quad.cpp.7451D57F10C15E45.idx  Quad.hpp.AC2142491D060193.idx  ShaderProgram.cpp.A023DEB82972749D.idx  ShaderProgram.hpp.FC66DD7DC1F73489.idx  Sphere.cpp.250F9277E17935CC.idx  Sphere.hpp.B40504C542736F2D.idx  main.cpp.9B544ED38383BCF5.idx
assets/shaders/: blackhole.comp  blackhole.frag  blackhole.vert  cubemap.frag  cubemap.vert  present.frag  present.vert
cmake/: patch_glad.cmake
src/: Application.cpp  Application.hpp  BlackHole.cpp  BlackHole.hpp  Box.cpp  Box.hpp  Camera.cpp  Camera.hpp  Cubemap.cpp  Cubemap.hpp  FinalImage.cpp  FinalImage.hpp  MeshBase.hpp  Quad.cpp  Quad.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sphere.cpp  Sphere.hpp  main.cpp
